--- a/server/package.json
+++ b/server/package.json
@@ -12,24 +12,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "5.10.2",
+    "@prisma/client": "^6.19.1",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.11",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.7",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.24",
+    "@types/nodemailer": "^7.0.4",
     "nodemon": "^3.1.0",
-    "prisma": "5.10.2",
+    "prisma": "^6.19.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
